Update 'tp429qoho-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a1b8db0b7005a8a77259449b0cdd7dc7a33422a5@sha256:b8aa2137f0571b53e7614aed8370f7595b8f24989bbc312315d1df39565fd871

--- a/components/tp429qoho-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/tp429qoho-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tp429qoho-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a1b8db0b7005a8a77259449b0cdd7dc7a33422a5@sha256:b8aa2137f0571b53e7614aed8370f7595b8f24989bbc312315d1df39565fd871
+          name: container-image
